[gd_scene load_steps=10 format=2]

[ext_resource path="res://Fonts/PatrickHand-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Store.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.870588, 0.486275, 0.737255, 1 )

[sub_resource type="DynamicFont" id=4]
size = 33
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.709804, 0.384314, 0.596078, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.376471, 0.580392, 0.6, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.870588, 0.486275, 0.737255, 0 )

[sub_resource type="DynamicFont" id=5]
size = 23
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 1 )

[node name="Panel" type="Panel" groups=[
"Persist",
]]
margin_right = 1024.0
margin_bottom = 600.0
custom_styles/panel = SubResource( 7 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoldLabel" type="Label" parent="."]
margin_left = 910.0
margin_top = 1.0
margin_right = 1024.0
margin_bottom = 50.0
grow_vertical = 0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.894118, 0.964706, 0.027451, 1 )
text = "[money]"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickButton" type="TextureButton" parent="."]
margin_left = 275.0
margin_top = 41.9406
margin_right = 781.0
margin_bottom = 516.941
size_flags_horizontal = 4
size_flags_vertical = 4
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="."]
margin_left = 1.0
margin_top = 561.06
margin_right = 93.0
margin_bottom = 598.06
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Cofnij"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StoreCount" type="Label" parent="."]
margin_left = 950.0
margin_top = 45.0
margin_right = 990.0
margin_bottom = 73.0
grow_vertical = 0
custom_fonts/font = SubResource( 6 )
text = "[0]"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ClickButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_SaveButton_pressed"]
